--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
     <!-- Fact Counter -->
 
     <!-- Team Start -->
-    <div class="container-fluid team pb-5 pt-5">
+    <div class="container-fluid team pb-5 pt-5  bg-image">
       <div class="container pb-5">
         <div
           class="text-center mx-auto pb-5 wow fadeInUp"
@@ -280,7 +280,7 @@
 
     <!-- feature Start -->
     <div class="container-fluid blog pb-5">
-      <div class="container pb-5">
+      <div class="container py-5">
         <div
           class="text-center mx-auto pb-5 wow fadeInUp"
           data-wow-delay="0.2s"
@@ -364,10 +364,10 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter bg-image"
+      class="container-fluid footer py-2 wow fadeIn counter bg-imagefooter"
       data-wow-delay="0.2s"
     >
-      <div class="container py-5">
+      <div class="container py-4">
         <div class="row g-5 mb-5 align-items-center">
           <div class="col-lg-7">
             <div
@@ -406,12 +406,12 @@
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
                 <h3 class="text-white mb-4 elem_hover">DCA</h3>
-                <p class="mb-3 text-justify text-white elem_hover">
+                <p class="mb-3 text-justify text-white elem_hover pe-5">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
-                  world-class chemical expertise right to your
-                  doorstep—efficiently, safely, and on time.
+                  world-class chemical expertise right to your doorstep
+                  efficiently, safely, and on time.
                 </p>
               </div>
             </div>
@@ -440,13 +440,19 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
-              <a href="#"
-                ><i class="fa fa-map-marker-alt me-2 text-white"></i
-                ><span class="text-white">
-                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
-                  Boisar, Tal.&DistPalghar 401506 )
-                </span></a
-              >
+              <a href="#">
+                <div class="row">
+                  <div class="col-1">
+                    <i class="fa fa-map-marker-alt me-2 text-white"></i>
+                  </div>
+                  <div class="col-11">
+                    <span class="text-white">
+                      DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                      Boisar, Tal. & DistPalghar 401506 )
+                    </span>
+                  </div>
+                </div>
+              </a>
               <a href="mailto:info@example.com"
                 ><i class="fas fa-envelope me-2 text-white"></i
                 ><span class="text-white">info@dcafinechem.com</span></a
