--- a/index.html
+++ b/index.html
@@ -101,34 +101,40 @@
                   class="carousel-caption-2-content"
                   style="max-width: 900px"
                 >
-                  <h4
-                    class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
-                    data-animation="fadeInLeft"
-                    data-delay="1s"
-                    style="animation-delay: 1s"
-                    style="letter-spacing: 3px"
-                  >
-                    Welcome to DCA Fine Chem Private Limited
-                  </h4>
-                  <h3
-                    class="display-3 text-capitalize text-white mb-4 fadeInLeft animated"
-                    data-animation="fadeInLeft"
-                    data-delay="1.3s"
-                    style="animation-delay: 1.3s"
-                  >
-                    Your Trusted Partner in Quality Chemicals
-                  </h3>
-                  <p
-                    class="mb-5 fs-5 text-white fadeInLeft animated"
-                    data-animation="fadeInLeft"
-                    data-delay="1.5s"
-                    style="animation-delay: 1.5s"
-                  >
-                    At DCA Fine Chem Pvt. Ltd., we specialize in the manufacture
-                    and supply of high-quality fine chemicals, intermediates,
-                    and specialty chemicals tailored to meet the evolving needs
-                    of diverse industries worldwide.
-                  </p>
+                  <div class="elem_hover">
+                    <h4
+                      class="text-white text-uppercase fw-bold mb-4 fadeInLeft animated"
+                      data-animation="fadeInLeft"
+                      data-delay="1s"
+                      style="animation-delay: 1s"
+                      style="letter-spacing: 3px"
+                    >
+                      Welcome to DCA Fine Chem Private Limited
+                    </h4>
+                  </div>
+                  <div class="elem_hover">
+                    <h3
+                      class="display-3 text-capitalize text-white mb-4 fadeInLeft animated"
+                      data-animation="fadeInLeft"
+                      data-delay="1.3s"
+                      style="animation-delay: 1.3s"
+                    >
+                      Your Trusted Partner in Quality Chemicals
+                    </h3>
+                  </div>
+                  <div class="elem_hover">
+                    <p
+                      class="mb-5 fs-5 text-white fadeInLeft animated"
+                      data-animation="fadeInLeft"
+                      data-delay="1.5s"
+                      style="animation-delay: 1.5s"
+                    >
+                      At DCA Fine Chem Pvt. Ltd., we specialize in the
+                      manufacture and supply of high-quality fine chemicals,
+                      intermediates, and specialty chemicals tailored to meet
+                      the evolving needs of diverse industries worldwide.
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -231,7 +237,7 @@
     <!-- feature End -->
 
     <!-- About Start -->
-    <div class="container-fluid about overflow-hidden py-5">
+    <div class="container-fluid about overflow-hidden py-5 bg-image">
       <div class="container py-5">
         <div class="row g-5">
           <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
@@ -443,7 +449,7 @@
     <!-- Fact Counter -->
 
     <!-- Service Start -->
-    <div class="container-fluid service bg-light overflow-hidden py-5">
+    <div class="container-fluid service bg-light overflow-hidden py-5 bg-image">
       <div class="container py-5">
         <div
           class="text-center mx-auto pb-5 wow fadeInUp"
@@ -647,10 +653,10 @@
 
     <!-- Footer Start -->
     <div
-      class="container-fluid footer py-2 wow fadeIn counter bg-image"
+      class="container-fluid footer py-2 wow fadeIn counter bg-imagefooter"
       data-wow-delay="0.2s"
     >
-      <div class="container py-5">
+      <div class="container py-4">
         <div class="row g-5 mb-5 align-items-center">
           <div class="col-lg-7">
             <div
@@ -689,12 +695,12 @@
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
                 <h3 class="text-white mb-4 elem_hover">DCA</h3>
-                <p class="mb-3 text-justify text-white elem_hover">
+                <p class="mb-3 text-justify text-white elem_hover pe-5">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
-                  world-class chemical expertise right to your
-                  doorstep—efficiently, safely, and on time.
+                  world-class chemical expertise right to your doorstep
+                  efficiently, safely, and on time.
                 </p>
               </div>
             </div>
@@ -723,13 +729,19 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
-              <a href="#"
-                ><i class="fa fa-map-marker-alt me-2 text-white"></i
-                ><span class="text-white">
-                  1DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
-                  Boisar, Tal.&DistPalghar 401506 )
-                </span></a
-              >
+              <a href="#">
+                <div class="row">
+                  <div class="col-1">
+                    <i class="fa fa-map-marker-alt me-2 text-white"></i>
+                  </div>
+                  <div class="col-11">
+                    <span class="text-white">
+                      DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
+                      Boisar, Tal. & DistPalghar 401506 )
+                    </span>
+                  </div>
+                </div>
+              </a>
               <a href="mailto:info@example.com"
                 ><i class="fas fa-envelope me-2 text-white"></i
                 ><span class="text-white">info@dcafinechem.com</span></a
