--- a/about.html
+++ b/about.html
@@ -405,8 +405,8 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
               <div class="footer-item">
-                <h3 class="text-white mb-4 elem_hover">DCA</h3>
-                <p class="mb-3 text-justify text-white elem_hover pe-5">
+                <h3 class="text-primary mb-4 elem_hover">DCA</h3>
+                <p class="mb-3 text-justify text-primary elem_hover pe-5">
                   Backed by a strong foundation of innovation, precision, and
                   commitment to excellence, our solutions empower industries to
                   achieve optimal performance and sustainability. We bring
@@ -418,35 +418,35 @@
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column ms-5">
-              <h4 class="text-white mb-4 elem_hover">Explore</h4>
+              <h4 class="text-primary mb-4 elem_hover">Explore</h4>
               <a href="#"
-                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
-                ><span class="text-white">Home</span></a
+                ><i class="fas fa-angle-right me-2 text-primary elem_hover"></i
+                ><span class="text-primary">Home</span></a
               >
               <a href="#"
-                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
-                ><span class="text-white">About</span></a
+                ><i class="fas fa-angle-right me-2 text-primary elem_hover"></i
+                ><span class="text-primary">About</span></a
               >
               <a href="#"
-                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
-                ><span class="text-white">services</span></a
+                ><i class="fas fa-angle-right me-2 text-primary elem_hover"></i
+                ><span class="text-primary">services</span></a
               >
               <a href="#"
-                ><i class="fas fa-angle-right me-2 text-white elem_hover"></i
-                ><span class="text-white"> Contact</span></a
+                ><i class="fas fa-angle-right me-2 text-primary elem_hover"></i
+                ><span class="text-primary"> Contact</span></a
               >
             </div>
           </div>
           <div class="col-md-6 col-lg-6 col-xl-3">
             <div class="footer-item d-flex flex-column">
-              <h4 class="text-white mb-4 elem_hover">Contact Info</h4>
+              <h4 class="text-primary mb-4 elem_hover">Contact Info</h4>
               <a href="#">
                 <div class="row">
                   <div class="col-1">
-                    <i class="fa fa-map-marker-alt me-2 text-white"></i>
+                    <i class="fa fa-map-marker-alt me-2 text-primary"></i>
                   </div>
                   <div class="col-11">
-                    <span class="text-white">
+                    <span class="text-primary">
                       DCA Fine Chem Pvt. Ltd. (Plot No. N-17, MIDC, Tarapur,
                       Boisar, Tal. & DistPalghar 401506 )
                     </span>
@@ -454,12 +454,12 @@
                 </div>
               </a>
               <a href="mailto:info@example.com"
-                ><i class="fas fa-envelope me-2 text-white"></i
-                ><span class="text-white">info@dcafinechem.com</span></a
+                ><i class="fas fa-envelope me-2 text-primary"></i
+                ><span class="text-primary">info@dcafinechem.com</span></a
               >
               <a href="tel:+012 345 67890"
-                ><i class="fas fa-phone me-2 text-white"></i
-                ><span class="text-white">+91-9860324431</span></a
+                ><i class="fas fa-phone me-2 text-primary"></i
+                ><span class="text-primary">+91-9860324431</span></a
               >
             </div>
           </div>
